# hs-service-template

./: .gitignore  AGENTS.md  README.md  cookiecutter.json  portainer-ce-2.33.7-openapi.yml  pyproject.toml  session-ses_4856.md
.gitea/workflows/: ci.yml
.github/workflows/: template-tests.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
docs/superpowers/plans/: 2026-05-30-cruft-auto-update.md  2026-05-31-cruft-skip-customized-files.md
docs/superpowers/specs/: 2026-05-30-cruft-auto-update-design.md  2026-05-31-cruft-skip-customized-files-design.md
hooks/: post_gen_project.py
specs/: optional-config-ssh-credentials.md
tests/: test_template.py
{{cookiecutter.repository_name}}/: .env.example  README.md  docker-compose.yml  pyproject.toml  renovate.json.example
{{cookiecutter.repository_name}}/.github/workflows/: cruft-update.yml  deploy-configurations.yml  deploy-stack.yml  deploy-swag-config.yml  reusable-portainer-redeploy.yml
{{cookiecutter.repository_name}}/configurations/: locations.ini
{{cookiecutter.repository_name}}/scripts/: deploy_swag_config.sh
{{cookiecutter.repository_name}}/swag/proxy-confs/: {{cookiecutter.service_name}}.subdomain.conf
{{cookiecutter.service_name}}/: .env.example  .gitleaks.toml  README.md  docker-compose.yml
{{cookiecutter.service_name}}/ci/: check.sh  release.sh  semantic-release.config.js
