[project]
name = "hs-service-template"
version = "0.1.0"
description = "Cookiecutter template for bootstrapping homelab services with Docker Compose, Traefik/SWAG, Homepage, and Portainer"
requires-python = ">=3.11"
readme = "README.md"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "cookiecutter>=2.6",
    "pytest>=8",
]
